// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders EuiColorStops 1`] = `
<div
  class="euiRangeWrapper euiColorStops testClass1 testClass2"
  data-test-subj="euiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, #FF0000 undefined%,#00FF00 undefined%,#0000FF undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiColorStops__addContainer"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:0%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#FF0000"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:21%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#00FF00"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#0000FF"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders compressed EuiColorStops 1`] = `
<div
  class="euiRangeWrapper euiColorStops testClass1 testClass2"
  data-test-subj="euiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeHighlight euiRangeHighlight--compressed euiColorStops__highlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, #FF0000 undefined%,#00FF00 undefined%,#0000FF undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiColorStops__addContainer"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:0%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#FF0000"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:21%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#00FF00"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#0000FF"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders disabled EuiColorStops 1`] = `
<div
  class="euiRangeWrapper euiColorStops euiColorStops-isDisabled testClass1 testClass2"
  data-test-subj="euiColorStops"
  tabindex="-1"
>
  <p
    aria-live="polite"
    class="euiScreenReaderOnly"
  >
    Test:  Disabled. Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack euiRangeTrack--disabled"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, #FF0000 undefined%,#00FF00 undefined%,#0000FF undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiColorStops__addContainer euiColorStops__addContainer-isDisabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:0%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="true"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          disabled=""
          role="slider"
          style="background:#FF0000"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:21%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="true"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          disabled=""
          role="slider"
          style="background:#00FF00"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="true"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          disabled=""
          role="slider"
          style="background:#0000FF"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders empty EuiColorStops 1`] = `
<div
  class="euiRangeWrapper euiColorStops testClass1 testClass2"
  data-test-subj="euiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="background:linear-gradient(to right,);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiColorStops__addContainer"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget"
        style="left:0%"
      />
    </div>
  </div>
</div>
`;

exports[`renders fixed stop EuiColorStops 1`] = `
<div
  class="euiRangeWrapper euiColorStops testClass1 testClass2"
  data-test-subj="euiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, #FF0000 undefined%, #FF0000 undefined%,#00FF00 undefined%, #00FF00 undefined%,#0000FF undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiColorStops__addContainer"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:0%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#FF0000"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:21%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#00FF00"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#0000FF"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders free-range EuiColorStops 1`] = `
<div
  class="euiRangeWrapper euiColorStops testClass1 testClass2"
  data-test-subj="euiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="background:linear-gradient(to right,);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiColorStops__addContainer"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget"
        style="left:0%"
      />
    </div>
  </div>
</div>
`;

exports[`renders fullWidth EuiColorStops 1`] = `
<div
  class="euiRangeWrapper euiRangeWrapper--fullWidth euiColorStops testClass1 testClass2"
  data-test-subj="euiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, #FF0000 undefined%,#00FF00 undefined%,#0000FF undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiColorStops__addContainer"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:0%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#FF0000"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:21%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#00FF00"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#0000FF"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders max-only EuiColorStops 1`] = `
<div
  class="euiRangeWrapper euiColorStops testClass1 testClass2"
  data-test-subj="euiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="background:linear-gradient(to right,);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiColorStops__addContainer"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget"
        style="left:0%"
      />
    </div>
  </div>
</div>
`;

exports[`renders min-only EuiColorStops 1`] = `
<div
  class="euiRangeWrapper euiColorStops testClass1 testClass2"
  data-test-subj="euiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="euiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="background:linear-gradient(to right,);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiColorStops__addContainer"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget"
        style="left:0%"
      />
    </div>
  </div>
</div>
`;

exports[`renders readOnly EuiColorStops 1`] = `
<div
  class="euiRangeWrapper euiColorStops euiColorStops-isReadOnly testClass1 testClass2"
  data-test-subj="euiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="euiScreenReaderOnly"
  >
    Test: Read-only.  Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeHighlight euiColorStops__highlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, #FF0000 undefined%,#00FF00 undefined%,#0000FF undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiColorStops__addContainer euiColorStops__addContainer-isDisabled"
      data-test-subj="euiColorStopsAdd"
    >
      <div
        class="euiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:0%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_0"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#FF0000"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:21%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_1"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#00FF00"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="euiPopover euiPopover--anchorDownCenter euiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="euiPopover__anchor euiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="euiRangeThumb euiColorStopThumb"
          data-index="euiColorStop_2"
          data-test-subj="euiColorStopThumb"
          role="slider"
          style="background:#0000FF"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;
